# via_micro

./: .env  Cargo.toml  README.md
migrations/: 20240122064812_users.sql
via_basic/: Cargo.toml
via_web/: Cargo.toml  via.http  web.http
via_web/src/: lib.rs  main.rs
via_web/src/common/: res.rs
via_web/src/db/: mod.rs
via_web/src/entities/domain/: mod.rs
via_web/src/entities/dto/: common_dto.rs  mod.rs  user_dto.rs
via_web/src/handler/: user_handler.rs
via_web/src/service/: user_service.rs
