[package]
name = "via_web"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
tokio = { version = "*", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
] }
# 一次性初始化对象工具包
once_cell = "1.19"
mime = "0.3"
